<resources>
    <string name="app_name">Sale fulbito</string>
    <string name="hint_name">Nombre de usuario</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_confirm_password">Confirmar contraseña</string>
    <string name="text_login"><font fgcolor="#FF000000">Iniciar sesion</font></string>
    <string name="text_register"><font fgcolor="#FF000000">Registrarse</font></string>
    <string name="error_message_name">Ingrese el nombre completo</string>
    <string name="error_message_email_not_filled">El mail no puede quedar vacio</string>
    <string name="error_message_email">Ingrese un mail valido</string>
    <string name="error_message_password">Ingrese la contraseña</string>
    <string name="success_message">Registro exitoso</string>
    <string name="change_message">Cambios guardados</string>
    <string name="text_not_member">¿No tienes una cuenta? Crea una</string>
    <string name="text_already_member">¿Estas registrado? Inicia sesion</string>
    <string name="error_email_exists">Ya existe el mail</string>
    <string name="error_password_match">La contraseña no coincide</string>
    <string name="error_valid_email_password"> Mail o Contraseña incorrectos</string>

    <string name="checkBoxAdmin">¿Eres Administrador?</string>
    <string name="logOut">Cerrar sesion</string>

    <string name="hint_Complex_name">Nombre del Complejo Deportivo</string>
    <string name="hint_phone">Telefono</string>
    <string name="hint_location">Ubicacion</string>
    <string name="checkBox_parking">Estacionamiento</string>
    <string name="checkBox_locker_room">Vestuario</string>
    <string name="checkBox_grill">Parrilla</string>
    <string name="save"><font fgcolor="#FF000000">Guardar</font></string>

    <string name="error_message_complex_name">Ingrese el nombre del Complejo</string>
    <string name="error_message_complex_phone">Ingrese el telefono</string>
    <string name="error_message_complex_location">Ingrese la ubicacion</string>
    <string name="success_message_save_complex">Se guardo el complejo correctamente</string>
    <string name="success_message_save_reservation">Se ha registrado su reserva</string>
    <string name="error_price">Ingrese el precio</string>
    <string name="error_message_date">Seleccione una fecha</string>
    <string name="error_message_time">Seleccione un horario</string>
    <string name="error_database">Error al escribir en la base de datos</string>
    <string name="ok">Ok</string>

    <string name="request_map_permission">Para activar la localizacion ve a ajuste y activa los permisos</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Idioma</string>

    <!-- MENU DE OPCIONES -->
    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Perfil</string>
    <string name="menu_slideshow">Reservas</string>
    <string name="menu_contact">Contacto</string>
    <string name="menu_close_session">Salir</string>

    <!-- MENU PERFIL -->
    <string name="menu_title_perfil">Mis Datos Personales</string>
    <string name="update_dates">Actualizar Datos</string>
    <string name="update_pass">Actualizar Contraseña</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="services_complex">Servicios que ofrece nuestro complejo: </string>
    <string name="cancha_1_futbol_5">Cancha 1 - Futbol 5</string>
    <string name="date_reservation">¿Cuándo quieres reservar?</string>
    <string name="time_reservation">¿A qué hora?</string>
    <string name="reservar"><font fgcolor="#FF000000">Reservar</font></string>
    <string name="map"><font fgcolor="#FF000000">Mapa</font></string>
    <string name="iluminacion">Iluminacion</string>
    <string name="techo">Techo</string>
    <string name="sintetico">Sintetico</string>
    <string name="price">Precio:</string>
    <string name="field_price">Precio de la cancha</string>
    <string name="error_reservation_message">"No hay disponibilidad en ese horario y /o dia. Por favor elija otro"</string>
    
    <string name="basic_chanel_name">Notificaciones Reservas</string>
    <string name="basic_channel_id">basic_channel</string>
    <string name="basic_channel_description">Canal para notificaciones sencillas</string>
    <string name="notification_title">Reservar cancha</string>
    <string name="unaj">UNAJ</string>
    <string name="delete_reserva"><font fgcolor='#FF1400'>Cancelar Reserva</font></string>


</resources>