<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_perfil"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_reservas"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/contactFragment"
            android:icon="@drawable/ic_menu_contact"
            android:title="@string/menu_contact" />
        <item
            android:id="@+id/logOut"
            android:icon="@drawable/ic_menu_session"
            android:title="@string/menu_close_session" />
    </group>
</menu>